tests/rosetta/out/Fortran/100-doors-2.error
gfortran error: exit status 1
/workspace/mochi/tests/rosetta/out/Fortran/100-doors-2.f90:2:8:

    2 | program 100_doors_2
      |        1
Error: Invalid form of PROGRAM statement at (1)
/workspace/mochi/tests/rosetta/out/Fortran/100-doors-2.f90:23:13:

   23 | end program 100_doors_2
      |             1
Error: Expected terminating name at (1)
f951: Error: Unexpected end of file in ‘/workspace/mochi/tests/rosetta/out/Fortran/100-doors-2.f90’
