tests/rosetta/out/Fortran/100-doors-2.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:38Z
program 100_doors_2
  implicit none
  integer :: door
  integer :: incrementer
  integer :: current
    integer :: line
    character(len=100) :: s0
  door = 1
  incrementer = 0
  do current = 1, 101
    write(s0,'(G0)') current
    line = trim('Door ' // s0) // ' '
    if ((current == door)) then
      line = line // 'Open'
      incrementer = (incrementer + 1)
      door = (((door + 2) * incrementer) + 1)
    else
      line = line // 'Closed'
    end if
    print *, line
  end do
end program 100_doors_2
